shill, patchpanel: Move PCH to a separate folder
cpplint config cannot be applied to the whole file but can be applied to
a folder. Move the precompiled headers to a seperate folder so that the
header guard check can be skipped on them.

BUG=None
TEST=FEATURES="test" emerge-$BOARD shill patchpanel

Change-Id: I646bc4fb46553a821846ab90deb14f25546dbaa9
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5237794
Commit-Queue: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Tested-by: Jie Jiang <jiejiang@chromium.org>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -172,8 +172,8 @@ static_library("libpatchpanel") {
   # Workaround for b/266863330: disable PCH when the user generates
   # compilation database for an editor.
   if (!use.compdb_only && !use.compilation_database) {
-    precompiled_header = "pch.h"
-    precompiled_source = "pch.h"
+    precompiled_header = "pch/pch.h"
+    precompiled_source = "pch/pch.h"
   }
   all_dependent_pkg_deps = [
     "protobuf",
@@ -352,8 +352,8 @@ if (use.test) {
     # Workaround for b/266863330: disable PCH when the user generates
     # compilation database for an editor.
     if (!use.compdb_only && !use.compilation_database) {
-      precompiled_header = "pch_test.h"
-      precompiled_source = "pch_test.h"
+      precompiled_header = "pch/pch_test.h"
+      precompiled_source = "pch/pch_test.h"
     }
     defines = [ "UNIT_TEST" ]
     deps = [
