arc: Allow arcvm-data-migrator to see the new cryptohome salt path
As CL:5183255 moved the system salt from /home/.shadow/salt to
/var/lib/system_salt, we need to make the new salt path visible for
arcvm-data-migrator by bind-mounting /var/lib into its minijail sandbox.

BUG=b:322776505
TEST=arc.VMDataMigration.p_to_r_arm passes
TEST=During arc.VMDataMigration.p_to_r_arm, check chrome://histograms
  after the migration and see that Arc.VmDataMigration.EndStatus is
  reported.

Change-Id: I7e0b57ffadb4976c191e1a72c6ef639b4a737a57
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5239895
Tested-by: Momoko Hattori <momohatt@chromium.org>
Reviewed-by: Youkichi Hosoi <youkichihosoi@chromium.org>
Commit-Queue: Momoko Hattori <momohatt@chromium.org>

--- a/arc/vm/data_migrator/minijail/arcvm-data-migrator.conf
+++ b/arc/vm/data_migrator/minijail/arcvm-data-migrator.conf
@@ -17,7 +17,7 @@
 #   --uts: new UTS/hostname namespace;
 #   --no-fs-restrictions: disable Landlock to loop mount the disk image;
 #   /dev: for creating a loop device for the virtio-blk disk image;
-#   /var/lib/metrics: for writing UMA stats;
+#   /var/lib: for accessing cryptohome salt and writing UMA stats;
 #   /run/dbus: for communication over bus.
 
 u = arcvm_data_migrator
@@ -36,4 +36,4 @@ mount = tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 mount = devtmpfs,/dev,devtmpfs,MS_NOSUID|MS_NOEXEC
 bind-mount = /run/dbus
 mount = /var,/var,tmpfs
-bind-mount = /var/lib/metrics,,1
+bind-mount = /var/lib,,1
