--- a/arc/vm/data_migrator/minijail/arcvm-data-migrator.conf
+++ b/arc/vm/data_migrator/minijail/arcvm-data-migrator.conf
@@ -1,5 +1,9 @@
 % minijail-config-file v0
 
+# Copyright 2023 The ChromiumOS Authors
+# Use of this source code is governed by a BSD-style license that can be
+# found in the LICENSE file.
+
 # Used jailing parameters:
 #   --profile=minimalistic-mountns-nodev: start with minimal mounts with an
 #       empty /dev;
@@ -35,5 +39,5 @@ bind-mount = /home
 mount = tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 mount = devtmpfs,/dev,devtmpfs,MS_NOSUID|MS_NOEXEC
 bind-mount = /run/dbus
-mount = /var,/var,tmpfs
+mount = tmpfs,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 bind-mount = /var/lib,,1
