crash: Update crash_reporter_logs.conf to include V8 errors
This helps investigate a crash due to failed v8::Context
initialization (see the bug link).

FYI: Sibling CL that logs V8 errors:
https://crrev.com/c/5237774

BUG=chromium:1501387
TEST=Manually and indirectly tested this on a device/VM: edited
   /etc/crash_reporter_logs.conf the same way as done in this patch,
   triggered a Chrome crash, and observed V8 errors in crash logs in
   /home/chronos/crash.

Change-Id: Ic07feccbbbb2f2aefe9abe08966a854d8d423678
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5249831
Tested-by: Yao Xiao <yaoxia@chromium.org>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: Yao Xiao <yaoxia@chromium.org>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -42,6 +42,7 @@ cros_installer=cat $(ls -1tr /var/log/update_engine | tail -5 | \
 # The process list is limited in width to save upload size. 120 columns is
 # enough to capture the chrome process --type switch.
 # NSS logs can be removed after crbug.com/1163303 is fixed.
+# V8 logs can be removed after crbug.com/1501387 is fixed.
 chrome=\
   for f in $(ls -1rt /var/log/chrome/chrome_[0-9]* | tail -2) \
     $(ls -1rt /home/chronos/u-*/log/chrome* 2>/dev/null | tail -2); do \
@@ -62,9 +63,15 @@ chrome=\
   tail -200 /var/log/vmlog/vmlog.LATEST; \
   echo EOF; \
   echo ; \
-  for f in $(ls -1rt /var/log/ui/ui\.[0-9]* | tail -2); do \
-    echo "===NSS logs (tail $f)==="; \
-    awk '$2 ~ "NSS:" { print }' $f | tail -32; \
+  for f in $(ls -1rt /var/log/ui/ui.[0-9]* | tail -2); do \
+    echo "===NSS logs (tail ${f})==="; \
+    tail -500 "${f}" | awk '$2 ~ "NSS:" { print }' | tail -32; \
+    echo EOF; \
+  done; \
+  for f in $(ls -1rt /var/log/ui/ui.[0-9]* | tail -2); do \
+    echo "===V8 logs (tail ${f})==="; \
+    tail -500 "${f}" | grep -E 'V8 Error:|Error installing extension' \
+      | tail -32; \
     echo EOF; \
   done;
 
