verity: use openssl for calculating hash
To allow for multiple hashing algo to be used.

NB: I know it looks ugly, but I have no desire to rewrite the entire tool :)
I did smallest possible surgical modification to extend functionality.

BUG=b:322886034
TEST=unittest

Cq-Depend: chromium:5250968
Change-Id: I216cd5657296d3eb7dcb936585bd30ea70041e2c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5251747
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>
Commit-Queue: Daniil Lunev <dlunev@chromium.org>
Tested-by: Daniil Lunev <dlunev@chromium.org>

--- a/verity/BUILD.gn
+++ b/verity/BUILD.gn
@@ -24,6 +24,7 @@ pkg_config("target_defaults") {
   pkg_deps = [
     "libbrillo",
     "libchrome",
+    "openssl",
   ]
   include_dirs = [ "include" ]
 }
