metrics: Replace nonblocking lock w/per-PID file.
The earlier nonblocking lock approach gave up too soon, resulting in
metrics being dropped. Instead use a per-PID file to avoid contention.

BUG=b:312758730
TEST=with https://crrev.com/c/5254719, tast crash.Histograms

Cq-Depend: chromium:5258625, chromium:5285638
Change-Id: I05029d077eaf0e2eb14b1510da8d709bc4651225
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5249876
Commit-Queue: Miriam Zimmerman <mutexlox@chromium.org>
Tested-by: Miriam Zimmerman <mutexlox@chromium.org>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Reviewed-by: Betul Soysal <betuls@google.com>

--- a/metrics/tmpfiles.d/metrics_daemon_dirs.conf
+++ b/metrics/tmpfiles.d/metrics_daemon_dirs.conf
@@ -4,7 +4,8 @@
 
 # Ensure the directories used by the metrics_daemon have the correct
 # permissions. The file permissions are corrected in the
-# metrics_daemon_files.conf, because installing a config with 'z' commands to
+# init/metrics_daemon.conf, because installing a config with 'z' commands to
 # /usr/lib/tmpfiles.d/ is dangerous; see https://crbug.com/1209413
 d= /var/lib/metrics 0755 metrics metrics
 d= /var/log/vmlog 0755 metrics metrics
+d= /var/lib/metrics/uma-events.d 2777 chronos chronos
