update_engine: add delta_generator subtool
This exports the SDK binary to cipd for use outside the SDK.

BUG=None
TEST=CQ passes

Change-Id: I076de52f224745652722347b8b842d6c06a7a458
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5252847
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>
Tested-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>

--- a/update_engine/BUILD.gn
+++ b/update_engine/BUILD.gn
@@ -31,6 +31,8 @@ group("all") {
       ":update_engine",
       ":update_engine_client",
     ]
+  } else {
+    deps += [ ":install_subtool" ]
   }
 
   if (use.test) {
@@ -414,6 +416,11 @@ executable("delta_generator") {
     ":libpayload_generator",
   ]
   install_path = "bin"
+}
+
+install_config("install_subtool") {
+  sources = [ "delta_generator_subtool.textproto" ]
+  install_path = "/etc/cros/sdk-packages.d/update_engine"
 }
 
 if (use.test || use.fuzzer) {
