heartd: Add unittest for daemon start up failure case
BUG=b:309049308
TEST=FEATURES=test emerge-brya heartd

Change-Id: I537a79fcce9f946aef038de7e5bfcb2e5a2bc650
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5256321
Reviewed-by: Florian Zubeil <zubeil@google.com>
Commit-Queue: Kerker Yang <kerker@chromium.org>
Reviewed-by: Denny Huang <dennyh@google.com>
Tested-by: Kerker Yang <kerker@chromium.org>

--- a/heartd/daemon/BUILD.gn
+++ b/heartd/daemon/BUILD.gn
@@ -38,6 +38,7 @@ if (use.test) {
       "database_test.cc",
       "heartbeat_manager_test.cc",
       "heartbeat_tracker_test.cc",
+      "heartd_test.cc",
     ]
     configs += [
       "//common-mk:test",
