Add comment that chrome_dev.conf can affect integration tests
This CL adds a note that the configuration specified in chrome_dev.conf
file can affect test run on the device.

BUG=None
TEST=None

Change-Id: I0b24152c02e1eb363d1b19662e752adb754be012
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5261080
Commit-Queue: Jun Ishiguro <junis@google.com>
Tested-by: Jun Ishiguro <junis@google.com>
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>

--- a/login_manager/chrome_dev.conf
+++ b/login_manager/chrome_dev.conf
@@ -36,6 +36,10 @@
 # it. Permanent changes to Chrome's configuration, including conditionally-set
 # flags, should be made in session_manager (see chrome_setup.h).
 #
+# BEWARE: Any settings here might affect the behavior of ChromeOS integration
+# tests run on this device (e.g. Tast tests) and could lead to unexpected
+# results.
+#
 # To edit this file rootfs write protection must be removed:
 # https://chromium.googlesource.com/chromiumos/docs/+/HEAD/developer_mode.md#disable-verity
 ################################################################################
