--- a/diagnostics/cros_healthd/BUILD.gn
+++ b/diagnostics/cros_healthd/BUILD.gn
@@ -78,6 +78,7 @@ if (use.test) {
       "//diagnostics/base:healthd_testrunner",
       "//diagnostics/base:test",
       "//diagnostics/cros_healthd/delegate:test",
+      "//diagnostics/cros_healthd/delegate/events:test",
       "//diagnostics/cros_healthd/delegate/fetchers:test",
       "//diagnostics/cros_healthd/delegate/routines:test",
       "//diagnostics/cros_healthd/delegate/utils:test",
