--- a/diagnostics/cros_healthd/delegate/events/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/events/BUILD.gn
@@ -28,3 +28,22 @@ source_set("events") {
     "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
 }
+
+if (use.test) {
+  pkg_config("test_pkg_deps") {
+    pkg_deps = [
+      "libchrome",
+      "libchrome-test",
+      "libmojo",
+    ]
+  }
+
+  source_set("test") {
+    sources = [ "audio_jack_evdev_delegate_test.cc" ]
+    configs += [
+      ":test_pkg_deps",
+      "//common-mk:test",
+    ]
+    deps = [ ":events" ]
+  }
+}
