camera: add use.camera_angle_backend in frame_annotator BUILD
We need to define USE_CAMERA_ANGLE_BACKEND if we have the use flag
camera_angle_backend to be sure to get the right call to
eglGetPlatformDisplay and not eglGetDisplay

BUG=b:277798516
TEST=run the camera app with effects enabled on top of ANGLE

Change-Id: I54d116075d101265bf8c66a3c0b238c8aab81202
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5260901
Tested-by: Romaric Jodin <rjodin@chromium.org>
Reviewed-by: Juliana Chang <julianachang@chromium.org>
Commit-Queue: Juliana Chang <julianachang@chromium.org>
Auto-Submit: Romaric Jodin <rjodin@chromium.org>

--- a/camera/features/frame_annotator/BUILD.gn
+++ b/camera/features/frame_annotator/BUILD.gn
@@ -16,4 +16,6 @@ source_set("frame_annotator") {
   # -fPIC needed by the libcros_camera.so shared library.
   configs += [ "//common-mk:pic" ]
   deps = [ "//camera/common:libcros_camera_mojom" ]
+
+  defines = [ "USE_CAMERA_ANGLE_BACKEND=${use.camera_angle_backend}" ]
 }
