fbpreprocessor: create ManagerImpl
Turn the |Manager| class into an abstract class and introduce the
|ManagerImpl| class to do what the |Manager| class used to do. This is a
no-op refactor to make it easier to create a fake implementation
of |Manager| to be used in unit tests.

BUG=b:309365285
TEST=FEATURES=test emerge-${BOARD} fbpreprocessord
TEST=cros deploy ${DUT} fbpreprocessord
TEST=restart fbpreprocessord
TEST=echo 1 > /sys/kernel/debug/iwlwifi/0000\:00\:14.3/iwlmvm/fw_dbg_collect
TEST=ls -lR /run/daemon-store/fbpreprocessord/ shows a firmware dump in
"processed_dumps"
TEST=dbus-send --system --print-reply=literal
--dest=org.chromium.FbPreprocessor /org/chromium/FbPreprocessor
org.chromium.FbPreprocessor.GetDebugDumps returns the expected output
https://paste.googleplex.com/5033126960562176

Change-Id: Ie05463dc276a73c0a86992cf512f71120903f803
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5265710
Reviewed-by: Yichen Yu <yichenyu@chromium.org>
Commit-Queue: Nicolas Norvez <norvez@chromium.org>
Tested-by: Nicolas Norvez <norvez@chromium.org>

--- a/fbpreprocessor/BUILD.gn
+++ b/fbpreprocessor/BUILD.gn
@@ -53,7 +53,7 @@ static_library("libfbpreprocessord") {
     "fbpreprocessor_daemon.cc",
     "firmware_dump.cc",
     "input_manager.cc",
-    "manager.cc",
+    "manager_impl.cc",
     "output_manager.cc",
     "platform_features_client.cc",
     "pseudonymization_manager.cc",
