--- a/vm_tools/concierge/BUILD.gn
+++ b/vm_tools/concierge/BUILD.gn
@@ -18,13 +18,6 @@ proto_library("protos") {
 }
 
 static_library("libconcierge") {
-  # TODO(b/293801301): Add PCI hotplug support for aarch64.
-  # PCI hotplug is only enabled on x86_64 architecture.
-  if (current_cpu == "x64") {
-    pci_hotplug_slots = true
-  } else {
-    pci_hotplug_slots = false
-  }
   sources = [
     "arc_vm.cc",
     "balloon_policy.cc",
@@ -113,7 +106,10 @@ static_library("libconcierge") {
   ]
   defines = [
     "USE_ARCVM_GKI=${use.arcvm_gki}",
-    "PCI_HOTPLUG_SLOTS=${pci_hotplug_slots}",
+
+    # TODO(b/293801301): Add PCI hotplug support for aarch64.
+    # PCI hotplug is only enabled on x86_64 architecture.
+    "USE_PCI_HOTPLUG_SLOTS=${use.amd64}",
   ]
 
   cflags_cc = [
