system_api: Add install logic for D-Bus headers
Add a template to install required headers to the corresponding path.

BUG=None
TEST=CQ
TEST=FEATURES=test emerge-drallion chromeos-base/system_api

Cq-Depend: chromium:5267460, chrome-internal:6939196
Change-Id: I8520d273f409692f89e221a746e0dda12388cb59
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5266801
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Reviewed-by: Chung-sheng Wu <chungsheng@google.com>
Commit-Queue: Byron Lee <byronlee@chromium.org>
Tested-by: Byron Lee <byronlee@chromium.org>

--- a/system_api/BUILD.gn
+++ b/system_api/BUILD.gn
@@ -3,9 +3,11 @@
 # found in the LICENSE file.
 
 import("//common-mk/proto_library.gni")
+import("//system_api/dbus/install_dbus_client_headers.gni")
 
 group("all") {
   deps = [
+    ":install_dbus_headers",
     ":install_headers",
     ":install_pkg_config",
     ":libsystem_api",
@@ -107,6 +109,40 @@ install_config("install_headers") {
   ]
   install_path = "/usr/include/chromeos"
   recursive = true
+}
+
+install_dbus_client_headers("install_dbus_headers") {
+  target_packages = [
+    "anomaly_detector",
+    "attestation",
+    "biod",
+    "chunneld",
+    "crash-reporter",
+    "cros-disks",
+    "cros_healthd",
+    "cryptohome",
+    "debugd",
+    "discod",
+    "dlcservice",
+    "fbpreprocessor",
+    "kerberos",
+    "login_manager",
+    "lorgnette",
+    "oobe_config",
+    "runtime_probe",
+    "pciguard",
+    "permission_broker",
+    "printscanmgr",
+    "power_manager",
+    "rgbkbd",
+    "rmad",
+    "shadercached",
+    "shill",
+    "smbprovider",
+    "tpm_manager",
+    "u2f",
+    "update_engine",
+  ]
 }
 
 install_config("install_pkg_config") {
