attestation: Add metrics for cert fetching
BUG=b:316847456
TEST=build ok
TEST=deploy to DUT, verify that there are no seccomp violations.

Change-Id: Ic33557f202a943dda0d32dff57cad13d0618c7c6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5271289
Commit-Queue: Howard Yang <hcyang@google.com>
Tested-by: Howard Yang <hcyang@google.com>
Reviewed-by: Yi Chou <yich@google.com>

--- a/attestation/BUILD.gn
+++ b/attestation/BUILD.gn
@@ -252,6 +252,7 @@ generate_dbus_proxies("pca-agent-proxies") {
 source_set("pca_agent_server_library") {
   sources = [
     "pca_agent/server/default_transport_factory.cc",
+    "pca_agent/server/metrics.cc",
     "pca_agent/server/pca_agent_service.cc",
     "pca_agent/server/pca_request.cc",
     "pca_agent/server/rks_agent_service.cc",
@@ -259,7 +260,10 @@ source_set("pca_agent_server_library") {
   ]
   configs += [ ":target_defaults" ]
   deps = [ ":pca-agent-adaptors" ]
-  pkg_deps = [ "libshill-client" ]
+  pkg_deps = [
+    "libmetrics",
+    "libshill-client",
+  ]
 }
 
 executable("pca_agentd") {
