--- a/attestation/pca_agent/server/minijail/pca_agentd.conf
+++ b/attestation/pca_agent/server/minijail/pca_agentd.conf
@@ -1,11 +1,16 @@
 % minijail-config-file v0
 
+# Copyright 2024 The ChromiumOS Authors
+# Use of this source code is governed by a BSD-style license that can be
+# found in the LICENSE file.
+
 # Uses minijail (drop root, set no_new_privs, set seccomp filter).
 # TODO(259354228): Remove once resolv.conf migration to dns-proxy is done.
 # Mounts /run/shill for DNS lookup.
 # Mounts /run/dns-proxy for DNS lookup.
 # Mounts from /mnt to /mnt/stateful_partition/unencrypted for profiling part.
 # Mounts /mnt/stateful_partition/unencrypted/profraws for writing profraw files.
+# Mounts the metrics directory.
 
 u = attestation
 g = attestation
@@ -25,4 +30,6 @@ bind-mount = /mnt/stateful_partition/unencrypted
 bind-mount = /run/dbus
 bind-mount = /run/shill
 bind-mount = /run/dns-proxy
+mount = /var,/var,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M
+bind-mount = /var/lib/metrics,,1
 S = /usr/share/policy/pca_agentd-seccomp.policy
