login: Update 'kill signal' comments
These comments became obsolete here:
https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2445912

We still have a configurable 3 vs. 12 second timeout though, so just
update the comments to explain this.

BUG=none
TEST=none

Change-Id: I7f863ed260464dcce37abd57500009eef94bfe67
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5274322
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Auto-Submit: Brian Norris <briannorris@chromium.org>
Tested-by: Brian Norris <briannorris@chromium.org>

--- a/login_manager/init/upstart/ui.conf
+++ b/login_manager/init/upstart/ui.conf
@@ -33,8 +33,9 @@ limit nice 40 40
 limit rtprio 10 10
 
 # Extend the grace period given to the session_manager before upstart decides
-# it's gone unresponsive on job termination and must be killed. Chrome gets 12s
-# (configured below) to shut down on devices with HDDs, so give a cushion.
+# it's gone unresponsive on job termination and must be killed. Chrome gets 3s
+# to shut down in most cases, and longer when collecting core dumps for
+# development, so give a cushion.
 kill timeout 20  # In seconds.
 
 # Uncomment line below to output to VT02
