crash: Get ml_service logs form /var/log/messages
BUG=b:324160257
TEST=CQ only

Change-Id: I2d0ce206f98054d91618ce71ddb7973b46a027db
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5273945
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Tested-by: Andrew Moylan <amoylan@chromium.org>
Commit-Queue: Andrew Moylan <amoylan@chromium.org>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -890,3 +890,9 @@ shadercached=\
   echo "===/var/log/messages==="; \
   tail -n 50 /var/log/messages | grep shadercached; \
   echo EOF
+
+# ml_service logs for crashes.
+ml_service=\
+  echo "===/var/log/messages==="; \
+  tail -n 50 /var/log/messages | grep ml_service; \
+  echo EOF
