camera: Output Mojo Performance Test to system log
Currently, the log is not available in tast output. Output it to system
log should make the log visible in tast tests, so we can investigate
them.

BUG=b:316705534
TEST=cros_sdk USE='cros-debug' emerge-rex cros-camera-basic-ops-perf-tests && cros deploy $DUT cros-camera-basic-ops-perf-tests && cros_sdk tast run $DUT camera.MojoPerf && cros_sdk cat /tmp/tast/results/latest/system_logs/messages

Change-Id: I980690857c5992b439471f988be96535d8490e87
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5276816
Commit-Queue: Tommy Chiang <ototot@google.com>
Tested-by: Tommy Chiang <ototot@google.com>
Reviewed-by: Shik Chen <shik@chromium.org>
Auto-Submit: Tommy Chiang <ototot@google.com>

--- a/camera/common/basic_ops_perf_tests/BUILD.gn
+++ b/camera/common/basic_ops_perf_tests/BUILD.gn
@@ -18,6 +18,7 @@ generate_mojom_bindings("test_mojom") {
 pkg_config("target_defaults") {
   pkg_deps = [
     "benchmark",
+    "libbrillo",
     "libchrome",
   ]
 }
