--- a/arc/adbd/init/arc-adbd.conf
+++ b/arc/adbd/init/arc-adbd.conf
@@ -8,6 +8,9 @@ author        "chromium-os-dev@chromium.org"
 # Note: Lifecycle of this job is managed by arc-setup job.
 stop on stop-arc-instance or stopping ui
 
+# Android process so setting to -100
+oom score -100
+
 env PIDFILE=/run/arc/adbd.pid
 env RUNTIME_DIR=/run/arc/adbd
 
