resourced: use self managed cpuset cgroups for schedqos
As part of schedqos migration, resourced owns its cpuset cgroups for
schedqos. The new cpuset cgroups are equivalent to cpuset cgroups for
chrome set up by ConfigureNonUrgentCpuset() of login manager.

/sys/fs/cgroup/cpuset/resourced/all is equivalent to
/sys/fs/cgroup/cpuset/chrome/urgent.
/sys/fs/cgroup/cpuset/resourced/efficient is equivalent to
/sys/fs/cgroup/cpuset/chrome/non-urgent.

While the migration, cgroup_x86_64.rs apply changes to both new and old
cpuset cgroups.

BUG=b:308367275
TEST=tast run $DUT sched.SetQoSState

Change-Id: I94668f6ab2354220ba24b0535a968753b7ec879f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5275257
Reviewed-by: Brian Norris <briannorris@chromium.org>
Reviewed-by: David Stevens <stevensd@chromium.org>
Tested-by: Shin Kawamura <kawasin@google.com>
Commit-Queue: Shin Kawamura <kawasin@google.com>

--- a/init/upstart/cgroups.conf
+++ b/init/upstart/cgroups.conf
@@ -119,11 +119,14 @@ script
     done
   fi
 
-  # Create all the cgroupos resourced needs.
-  rsrc_root=/sys/fs/cgroup/cpu/resourced
-  mkdir -p "${rsrc_root}/normal" "${rsrc_root}/background" # croslint: disable:
-  chown -R resourced /sys/fs/cgroup/cpu/resourced # croslint: disable:
-  echo 10 > /sys/fs/cgroup/cpu/background/cpu.shares
+  # Create resourced's parent cgroup. Sub-cgroups are created and managed by
+  # resourced at runtime.
+  resourced_cpu_cgroup=/sys/fs/cgroup/cpu/resourced
+  resourced_cpuset_cgroup=/sys/fs/cgroup/cpuset/resourced
+  mkdir -p "${resourced_cpu_cgroup}" "${resourced_cpuset_cgroup}" \
+      # croslint: disable
+  chown -R resourced "${resourced_cpu_cgroup}" "${resourced_cpuset_cgroup}" \
+      # croslint: disable
 
   # Create a cpu cgroup for each VM type. Default cpu.shares is 1024. Limit the
   # VMs to 7/8ths of that initially.
